--- a/WTF_DICOM/SequenceViewerPage.xaml
+++ b/WTF_DICOM/SequenceViewerPage.xaml
@@ -8,7 +8,8 @@
       d:DataContext="{d:DesignInstance Type=local:SequenceViewerViewModel, IsDesignTimeCreatable=False}"
       Style="{StaticResource MaterialDesignWindow}"
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="SequenceViewerPage">
+      KeepAlive="True"
+      WindowTitle="SequenceViewerPage">
 
   <DataGrid  ItemsSource="{Binding SequenceEntries}"
              x:Name="SequenceEntryDataGrid"
@@ -26,10 +27,10 @@
 
   </DataGrid>
 
-  <DataGrid.CellStyle>
+  <!--<DataGrid.CellStyle>
     <Style TargetType="{x:Type DataGridCell}">
       <EventSetter Event="GotFocus" Handler="CellClick"/>
       <EventSetter Event="ContextMenu.ContextMenuOpening" Handler="DataGridContextMenuOpeningHandler"/>
     </Style>
-  </DataGrid.CellStyle>
+  </DataGrid.CellStyle>-->
 </Page>
